--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -3,3 +3,20 @@
 	background-color: #eee;
 	border: solid 1px black;
 }
+
+.form-title {
+	margin-top: 0;
+	margin-bottom: 0.5em;
+}
+
+.form-field label {
+	display: inline-block;
+	width: 100px;
+	text-align: right;
+	padding-right: 5px;
+}
+
+.form-field input {
+	display: inline-block;
+	width: 200px;
+}
